tests/type-errors/arith_div_tez_nat.arl
archetype arith_div_tez_nat

entry main () {
  effect {
    var v = 1tz / 1
  }
}
